<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/titleView"
        android:layout_width="500dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/detailView"
        android:layout_width="500dp"
        android:layout_height="89dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/highlightedView"
        android:layout_width="145dp"
        android:layout_height="63dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/highlighted"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailView" />

    <Spinner
        android:id="@+id/isHighlightedVIew"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/highlightedView"
        app:layout_constraintTop_toBottomOf="@+id/detailView" />

    <TextView
        android:id="@+id/dollarSignVIew"
        android:layout_width="40dp"
        android:layout_height="63dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/dollar"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/isHighlightedVIew"
        app:layout_constraintTop_toBottomOf="@+id/detailView" />

    <EditText
        android:id="@+id/priceView"
        android:layout_width="93dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/price"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/dollarSignVIew"
        app:layout_constraintTop_toBottomOf="@+id/detailView"  />

    <Spinner
        android:id="@+id/facultyVIew"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isHighlightedVIew"/>

    <Spinner
        android:id="@+id/courseView"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/facultyVIew"
        app:layout_constraintTop_toBottomOf="@+id/priceView"  />

    <TextView
        android:id="@+id/institutionView"
        android:layout_width="500dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/institution"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facultyVIew" />

    <TextView
        android:id="@+id/postedByView"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/posted_by"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/institutionView"/>

    <TextView
        android:id="@+id/ownerVIew"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/ownername"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/postedByView"
        app:layout_constraintTop_toBottomOf="@+id/institutionView" />

    <EditText
        android:id="@+id/ageView"
        android:layout_width="76dp"
        android:layout_height="55dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postedByView" />

    <TextView
        android:id="@+id/monthsOldView"
        android:layout_width="314dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/months_old"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ageView"
        app:layout_constraintTop_toBottomOf="@+id/ownerVIew"  />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="60dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/okayButton"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>