...
        android:layout_toEndOf="@+id/welcome"
        android:layout_toRightOf="@+id/welcome"
        android:gravity="center_vertical"
        android:textSize="40sp" />

    <Button
        android:id="@+id/postingsButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="81dp"
...
        android:layout_marginTop="165dp"
        android:background="#F25022"
        android:text="Postings"
        android:textSize="20sp" />

    <Button
        android:id="@+id/myProfileButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/homepageUsernameTV"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="165dp"
...
        android:layout_marginRight="80dp"
        android:background="#7FBA00"
        android:text="My Profile"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addPostButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/postingsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="80dp"
...
