...
        android:text="Name:"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameUserProfile"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
...
        android:gravity="center_vertical"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromText" />

    <ListView
        android:id="@+id/usersPostListView"
        android:layout_width="481dp"
        android:layout_height="414dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersPosts" />
...
