...
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="135dp"
            android:layout_height="71dp"
            android:layout_marginTop="100dp"
            android:text="@string/action_sign_in_short"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
...
