<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/listHeading"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Listing all:"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/showingTextView"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/listHeading"
        android:layout_toRightOf="@+id/listHeading"
        android:gravity="center_vertical"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="490dp"
        android:layout_height="760dp"
        android:layout_below="@+id/listHeading"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="50dp" />
</RelativeLayout>